--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,14 @@ services:
       retries: 5
     networks:
       - kafka
+  
+  ollama:
+    image: ollama/ollama
+    container_name: ollama
+    ports:
+      - 11434:11434
+    volumes:
+      - ./data/ollama:/root/.ollama
 
   app:
     build:
@@ -43,3 +51,4 @@ services:
 
 networks:
   kafka:
+  
